--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Europe/London
 
 title: Olly Evans # the main title
 
-tagline: I like to code! # it will display as the subtitle
+tagline: I love football, editing and coding! # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -29,18 +29,17 @@ github:
   username: olly-evans # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: OllyYNWA # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Olly Evans
-  email: example@domain.com # change to your email address
+  email: Olly.Evans@warwick.ac.uk # change to your email address
   links:
-    # The first element serves as the copyright owner's link
-    - https://github.com/olly-evans/
-    - https://twitter.com/username # change to your Twitter homepage
-    # change to your GitHub homepage
+    - https://github.com/olly-evans
+    - https://twitter.com/
+
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
