--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,10 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: youtube
+  icon: "fa-brands fa-youtube"
+  url: "https://www.youtube.com/@Oliver_Evans9"
+
 
 - type: email
   icon: "fas fa-envelope"
